# goingmarry

./: .gitignore  docker-compose.yaml  pyproject.toml  test.sh
.github/workflows/: ci.yml
apps/logins/: apps.py  models.py
apps/plans/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/taps/: apps.py
apps/users/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
calendars/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
calendars/migrations/: 0001_initial.py
config/: settings.py  urls.py
github/workflows/: ci.yml
login/: apps.py  models.py
login/migrations/: 0002_initial.py  0003_rename_login_id_login_id_and_more.py
mysql_data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql_data/#innodb_redo/: #ib_redo9
mysql_data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql_data/mysql/: general_log_213.sdi  slow_log_214.sdi
mysql_data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  (+86 more)
plan/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
planner/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
templates/: calendars.html  login.html  plan.html  planner.html  signup.html
trip/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
(+16 files in other folders)
